updated chore:implemeted new functions

--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -1,11 +1,11 @@
 [project]
-name = 'tic-tac-toe'
+name = 'tic-tac-toe-v2'
 description = ''
 authors = []
 telemetry = true
 cache_dir = './.cache'
 requirements = []
-[contracts.tic-tac-toe]
+[contracts.tic-tac-toe-v2]
 path = 'contracts/tic-tac-toe.clar'
 clarity_version = 3
 epoch = 'latest'
